@@ -705,6 +705,17 @@
       </component>
     </version>
   </module>
+  <module name="gcalctool">
+    <version release="gnome-2.1-extras">
+      <component name="gcalctool" dir="gcalctool">
+	<podir dir="po"/>
+	<potname name="gcalctool.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="gcm">
     <version release="gnome-2.1-extras">
       <component name="gcm" dir="gcm">
