@@ -1,3 +1,7 @@
+2002-12-22  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added gcalctool to 2.1-extras.
+
 2002-12-15  Christian Neumair  <chris@gnome-de.org>
 
 	* translation-status.xml: Changed gnome-media branch to HEAD (2.1).
